--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 											<div class="column">
 											  <h2>Summary</h2>
 											  <ul>
-												<li>2 years of working experience in data analysis</li>
+												<li>3 years of cumulative working experience in data analysis</li>
 												<li>3 years of cumulative working experience in E-commerce</li>
 												<li>Microsoft Certified: Power BI Data Analyst Associate</li>
 												<!-- <li>Graduated from the University of Technology in Accounting</li> -->
@@ -107,8 +107,8 @@
 											<div class="column">
 											  <h2>Technical Skills</h2>
 											  <ul>
-												<li>Data tools: Excel, SQL, Power BI, Basic Python</li>
-												<li>Platforms: Magento, Salesforce, SAP</li>
+												<li>Data tools: Excel, Gsheets, SQL, Power BI, Basic Python</li>
+												<li>Platforms: Odoo, Magento, Salesforce, SAP</li>
 												<!-- <li>Web tools: HTML, CSS, Google Analytics</li> -->
 												<li>Other tools: Outlook, Notion/Trello, Teams, Diagram.net</li>
 											  </ul>
@@ -174,12 +174,23 @@
 										</a>
 										<p>Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost</p>
 									</li>
+
+									<!--
+									<li>
+										<a href="excel-projects/hiring-data-anaysis.html">
+											<img class="imagefix"  src="images/hiring_visualize_2.png" alt="Hiring Data Analysis" width="100%">
+										</a>
+										<p>Can talent assessment scores during the hiring process for Deputy Managers (DMs) be linked to future job performance?</p>
+									</li>
+
+									
 									<li>
 										<a href="excel-projects/headcount-in-2020.html">
 											<img class="imagefix"  src="images/headcount-2020.png" alt="The global Unicorn landscape" width="100%">
 										</a>
 										<p>How is 2020 headcount?</p>
 									</li>
+									-->
 								</ul>
 								<!--
 								<footer class="major">
@@ -319,24 +330,74 @@
 								<h2><span>Certificates</span></h2>
 								<h3></h3>
 							</header>
-							<p>
-								<ul style="text-align: left;">
-									<li>2022
-										<ul class="circle">
-											<li>May: Python Foundations for Data Analysis</li>
-											<li>Apr: Advanced MySQL Data Analysis</li>
-										</ul>
-									</li>
-									<li>2021
-										<ul class="circle">
-											<li>Dec: Microsoft Certified: Power BI Data Analyst Associate</li>
-											<li>Oct: Google Data Analytics Professional</li>
-											<li>May: MySQL Data Analysis</li>
-											<li>Jan: Power BI Desktop</li>
-										</ul>
-									</li>
-								</ul>
-							</p>
+
+							<table style="width:100%">
+								<tr>
+								  <th class="columnname">Time</th>
+								  <th class="columnname">School</th>
+								  <th class="columnname">Certificates</th>
+								</tr>
+								<tr>
+								  <td>03/2024</td>
+								  <td>Maven Analytics</td>
+								  <td>ChatGPT for Data Analytics</td>
+								</tr>
+								<tr>
+								  <td>02/2024 - 03/2024</td>
+								  <td>Maven Analytics</td>
+								  <td>Essential Statistics for Data Analysis</td>
+								</tr>
+								<tr>
+								  <td>01/2024 - 02/2024</td>
+								  <td>CIP School (Philippines)</td>
+								  <td>ESL (English as a Second Language)</td>
+								</tr>
+								<tr>
+								  <td>05/2022</td>
+								  <td>Maven Analytics</td>
+								  <td>Python Foundations for Data Analysis</td>
+								</tr>
+								<tr>
+								  <td>04/2022</td>
+								  <td>Maven Analytics</td>
+								  <td>Advanced MySQL Data Analysis</td>
+								</tr>
+								<tr>
+								  <td>12/2021</td>
+								  <td>Microsoft</td>
+								  <td>Microsoft Certified: Power BI Data Analyst Associate</td>
+								</tr>
+								<tr>
+								  <td>10/2021</td>
+								  <td>Google</td>
+								  <td>Google Data Analytics Professional</td>
+								</tr>
+								<tr>
+									<td>05/2021</td>
+									<td>Maven Analytics</td>
+									<td>MySQL Data Analysis</td>
+								  </tr>
+								<tr>
+									<td>01/2021</td>
+									<td>Maven Analytics</td>
+									<td>Power BI Desktop</td>
+								  </tr>
+								<tr>
+									<td>01/2021</td>
+									<td>Maven Analytics</td>
+									<td>Power Query, Power Pivot & DAX</td>
+								  </tr>
+								<tr>
+									<td>12/2020</td>
+									<td>Maven Analytics</td>
+									<td>Excel Analytics Tips</td>
+								  </tr>
+								<tr>
+									<td>11/2020</td>
+									<td>Maven Analytics</td>
+									<td>Excel Pivot Tables</td>
+								  </tr>
+							  </table>
 						</section>
 
 						<!-- Soft Skills -->
@@ -349,7 +410,8 @@
 								<ul style="text-align: left;">
 									<li>Open-minded and willing to learn new things</li>
 									<li>Be proactive at work and ability to work under high pressure</li>
-									<li>Ability to self-study, research and understand the English materials; Basic English (speaking and listening) </li>
+									<li>Ability to self-study, research and understand the English materials;
+									<li>Intermediate English</li>
 									<li>Able to work independently as well as in a team</li>
 								</ul>
 							</p>
