--- a/index.html
+++ b/index.html
@@ -333,9 +333,9 @@
 
 							<table style="width:100%">
 								<tr>
-								  <th class="columnname">Time</th>
-								  <th class="columnname">School</th>
-								  <th class="columnname">Certificates</th>
+								  <th class="columnname">Completion Month</th>
+								  <th class="columnname">Issuing Organization</th>
+								  <th class="columnname">Certificate Name</th>
 								</tr>
 								<tr>
 								  <td>03/2024</td>
