--- a/excel-projects/global-unicorn-landscape.html
+++ b/excel-projects/global-unicorn-landscape.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>The global Unicorn landscape - Despite the uncertainty of COVID-19, 2021 spawned more unicorns than the previous years combined</h1>
-						<p>Skills: Cleaning data, exploratory data analysis, pivot tables, data visualization, storytelling</p>
+						<p class="detailed-skill">Skills: Cleaning data, exploratory data analysis, pivot tables, data visualization, storytelling</p>
 					</header>
 
 				<!-- Main -->
@@ -34,7 +34,7 @@
                                     <p>A unicorn company is a private company with a valuation of more than $1 billion, and today there are over 1,000 unicorn companies around the world!</p>
                                 <h2>2. Dimensions & Measures</h2>
                                     <ul>
-                                        <li>Dimensions:  Dimensions: Company, Date Joined, Industry, City, Country, Continent, Year Founded, Select Investors</li>
+                                        <li>Dimensions: Company, Date Joined, Industry, City, Country, Continent, Year Founded, Select Investors</li>
                                         <li>Measures: Valuation, Funding</li>
                                     </ul>
 								<h2>3. Tool: Excel</h2>
@@ -61,7 +61,7 @@
 						<h2>Contact Me</h2>
 						<dl class="alt">
 							<dt><i class="fa-solid fa-envelope-circle-check"></i></dt>
-							<dd><a href="#">giang.pnt1410@gmail.com</a></dd>
+							<dd><a href="#">giangpnt.work@gmail.com</a></dd>
 							<dt><i class="fa-brands fa-linkedin"></i></dt>
 							<dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
 							<dt><i class="fa-brands fa-github"></i></dt>
