--- a/excel-projects/plato-pizza.html
+++ b/excel-projects/plato-pizza.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Plato's Pizza - What can we do to improve the pizza store's sales?</h1>
-						<p>Skills: Power query, pivot tables, data analysis, data visualization</p>
+						<p class="detailed-skill">Skills: Power query, pivot tables, data analysis, data visualization</p>
 					</header>
 
 				<!-- Main -->
@@ -83,7 +83,7 @@
 						<h2>Contact Me</h2>
 						<dl class="alt">
 							<dt><i class="fa-solid fa-envelope-circle-check"></i></dt>
-							<dd><a href="#">giang.pnt1410@gmail.com</a></dd>
+							<dd><a href="#">giangpnt.work@gmail.com</a></dd>
 							<dt><i class="fa-brands fa-linkedin"></i></dt>
 							<dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
 							<dt><i class="fa-brands fa-github"></i></dt>
