--- a/sql-projects/atliq_hardware.html
+++ b/sql-projects/atliq_hardware.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hiza logistics & Owee: Analyzing transport performance</title>
+		<title>Fuzzy Factory - Analyze and optimize the business’ marketing channels, website, and product portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -20,8 +20,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Hiza logistics & Owee: Analyzing transport performance</h1>
-						<p class="detailed-skill">Skills: Data analysis, pivot tables, data visualization</p>
+						<h1>AtliQ Hardware - Analyzing finance, sales and supply chain data</h1>
+						<p></p>
 					</header>
 
 				<!-- Main -->
@@ -29,23 +29,30 @@
 
 						<!-- Content -->
 							<section id="content" class="main">
-								<span class="image main"><img src="../images/hiza-logistics.png" alt="Hiza logistics & Owee: Analyzing transport performance" /></span>
 								<h2>1. Dataset Summary</h2>
-                                    <p>Delivery order from week 1 to week 5.</p>
-								<h2>2. Data structure</h2>
-								<p>Multiple tables:</p>
-								<ul>
-									<li>Dropship</li>
-									<li>Non Dropship</li>
-									<li>CR Pickup</li>
-								</ul>
-                                <h2>3. Dimensions & Measures</h2>
+                                    <p>Maven Fuzzy Factory is an online retailer which has just launched their first product.</p>
+                                <h2>2. Objective</h2>
                                     <ul>
-                                        <li>Dimensions:  Delivery date</li>
-                                        <li>Measures: order_code, is_ontime_edd, is_ontime_fa_edd, is_ontime_fa_pickup</li>
+                                        <li>Access and explore the Maven Fuzzy Factory database.</li>
+                                        <li>Analyze and optimize the business’ marketing channels, website, and product portfolio.
+                                            <ul class="circle">
+                                                <li>Top pageview, top entry page</li>
+                                                <li>Bounce rate</li>
+                                                <li>Product portfolio</li>
+                                                <li>Funnel conversion rate</li>
+                                            </ul>
+                                        </li>
                                     </ul>
-								<h2>4. Tool: Excel</h2>
-                                
+                                <h2>3. Language: MySQL</h2>
+								<h2>4. Diagram</h2>
+								<span class="image main"><img src="..\images\fuzzy-factory-diagram.png" alt="" /></span>
+
+                                <footer class="major">
+									<ul class="actions special">
+										<li><a href="https://bit.ly/fuzzy_factory_sql" class="button" target="_blank">View source code</a></li>
+									</ul>
+								</footer>
+                            
                                     <p class="backtohomepage">
                                         <a href="https://giangpham1410.github.io/"> BACK TO HOMEPAGE</a>
                                     </p>
