--- a/sql-projects/student-marks.html
+++ b/sql-projects/student-marks.html
@@ -98,7 +98,7 @@
 						<h2>Contact Me</h2>
 						<dl class="alt">
 							<dt><i class="fa-solid fa-envelope-circle-check"></i></dt>
-							<dd><a href="#">giang.pnt1410@gmail.com</a></dd>
+							<dd><a href="#">giangpnt.work@gmail.com</a></dd>
 							<dt><i class="fa-brands fa-linkedin"></i></dt>
 							<dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
 							<dt><i class="fa-brands fa-github"></i></dt>
