--- a/excel-projects/headcount-in-2020.html
+++ b/excel-projects/headcount-in-2020.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>How is 2020 headcount?</h1>
-						<p>Skills: Data visualization, storytelling</p>
+						<p class="detailed-skill">Skills: Data visualization, storytelling</p>
 					</header>
 
 				<!-- Main -->
@@ -48,7 +48,7 @@
 						<h2>Contact Me</h2>
 						<dl class="alt">
 							<dt><i class="fa-solid fa-envelope-circle-check"></i></dt>
-							<dd><a href="#">giang.pnt1410@gmail.com</a></dd>
+							<dd><a href="#">giangpnt.work@gmail.com</a></dd>
 							<dt><i class="fa-brands fa-linkedin"></i></dt>
 							<dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
 							<dt><i class="fa-brands fa-github"></i></dt>
