--- a/excel-projects/remote-working-survey.html
+++ b/excel-projects/remote-working-survey.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?</h1>
-						<p>Skills: Cleaning data, pivot tables, data analysis, data visualization, storytelling</p>
+						<p class="detailed-skill">Skills: Cleaning data, pivot tables, data analysis, data visualization, storytelling</p>
 					</header>
 
 				<!-- Main -->
@@ -97,7 +97,7 @@
                         <h2>Contact Me</h2>
                         <dl class="alt">
                             <dt><i class="fa-solid fa-envelope-circle-check"></i></dt>
-                            <dd><a href="#">giang.pnt1410@gmail.com</a></dd>
+                            <dd><a href="#">giangpnt.work@gmail.com</a></dd>
                             <dt><i class="fa-brands fa-linkedin"></i></dt>
                             <dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
                             <dt><i class="fa-brands fa-github"></i></dt>
