--- a/excel-projects/us-labor-statistics.html
+++ b/excel-projects/us-labor-statistics.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>US Labor Statistics - What do wage & employment figures look like by industry?</h1>
-						<p>Skills: Exploratory data Analysis, data visualization, storytelling</p>
+						<p class="detailed-skill">Skills: Exploratory data Analysis, data visualization, storytelling</p>
 					</header>
 
 				<!-- Main -->
@@ -63,7 +63,7 @@
 						<h2>Contact Me</h2>
 						<dl class="alt">
 							<dt><i class="fa-solid fa-envelope-circle-check"></i></dt>
-							<dd><a href="#">giang.pnt1410@gmail.com</a></dd>
+							<dd><a href="#">giangpnt.work@gmail.com</a></dd>
 							<dt><i class="fa-brands fa-linkedin"></i></dt>
 							<dd><a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></dd>
 							<dt><i class="fa-brands fa-github"></i></dt>
