--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 										<!-- <p class="row"> -->
 											<!-- <div class="column" style="margin: auto; text-align: center;"> -->
-											<img style="float: right; margin-left: 20px; size" src="images/giang-avatar.png" alt="">
+											<img style="float: right; margin-left: 20px;" src="images/giang-avatar.png" alt="">
 											<!-- </div> -->
 
 											<div style="clear: right; text-align: left;  display: inline;">
@@ -168,7 +168,7 @@
 												<li>3 years of cumulative working experience in data analysis</li>
 												<li>3 years of cumulative working experience in E-commerce</li>
 												<li>Microsoft Certified: Power BI Data Analyst Associate</li>
-												<!-- <li>Graduated from the University of Technology in Accounting</li> -->
+												<li>Graduated from the University of Technology in Accounting</li> -->
 											  <!-- </ul>
 											</div>
 											<div class="column">
@@ -198,14 +198,14 @@
 										<a href="excel-projects/adeline-cases-tudy.html">
 											<img class="imagefix" src="images/adeline-case-study.jpg" alt="Adeline Drink - Sales Case Study" width="100%">
 										</a>
-										<p>Adeline Drink</br>
+										<p>Adeline Drink<br>
 											How to increase sales?</p>
 									</li>
 									<li>
 										<a href="excel-projects/plato-pizza.html">
 											<img class="imagefix" src="images/plato-pizza-dashboard.png" alt="Plato Pizza - Sales Dashboard" width="100%">
 										</a>
-										<p>Plato's Pizza</br>
+										<p>Plato's Pizza<br>
 											What can we do to improve the pizza store's sales?</p>
 									</li>
 
@@ -213,7 +213,7 @@
 										<a href="excel-projects/remote-working-survey.html">
 											<img class="imagefix" src="images/remote-work-report-cover.png" alt="Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?" width="100%">
 										</a>
-										<p>Remote Working Survey </br>
+										<p>Remote Working Survey <br>
 											How has remote work changed in 2021, barriers and opportunities?</p>
 									</li>
 
@@ -221,7 +221,7 @@
 										<a href="excel-projects/global-unicorn-landscape.html">
 											<img class="imagefix"  src="images/global-unicorn-landscape-cover.png" alt="The global Unicorn landscape" width="100%">
 										</a>
-										<p>The global Unicorn landscape</br>
+										<p>The global Unicorn landscape<br>
 											Despite the uncertainty of COVID-19, 2021 spawned more unicorns than the previous years combined</p>
 									</li>
 
@@ -229,7 +229,7 @@
 										<a href="excel-projects/hiza-logistics-owee-performance.html">
 											<img class="imagefix"  src="images/hiza-logistics.png" alt="Hiza logistics & Owee: Analyzing transport performance" width="100%">
 										</a>
-										<p>Hiza logistics & Owee</br>
+										<p>Hiza logistics & Owee<br>
 											Analyzing transport performance</p>
 									</li>
 									<!--
