--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					<!-- <img src="images/giang-banner-2.png" alt="Banner"> -->
 				<div style="margin: 80px 0 80px 0; width: 100%;">
 					<h1 style="font-size: 100px; text-align: center; color: #353BF7; font-family: Montserrat; font-weight: 800;">Giang's <span style="color: black;">portfolio.</span></h1>
-					<h3 style="color: black; text-align: center; font-family: Inconsolata">A human enjoys working with computers and numbers</h3>
+					<h3 style="color: black; text-align: center; font-family: Inconsolata">— Passionate Data Analyst Making Sense of the Numbers —</h3>
 				</div>
 				<!-- Nav -->
 					<nav id="nav">
@@ -128,12 +128,12 @@
 													<li>Enthusiastic about learning and using tools to improve work efficiency and accuracy.
 													</li>
 												</ul>
-												<p><b>Weakness</b>
+												<!-- <p><b>Weakness</b>
 												</p>
 												<p><ul>
 													<li>Basic English communication skills.
 													</li>
-												</ul></p>
+												</ul></p> -->
 												<p><b>Preferred locations</b></p>
 												<ul>
 													<li>Ho Chi Minh City.</li>
@@ -199,14 +199,16 @@
 											<img class="imagefix" src="images/adeline-case-study.jpg" alt="Adeline Drink - Sales Case Study" width="100%">
 										</a>
 										<p>Adeline Drink<br>
-											How to increase sales?</p>
+											How to increase sales?
+											<br/><span class="textbackground">Google Sheets</span> <span class="textbackground">Google Slide</span></p>
 									</li>
 									<li>
 										<a href="excel-projects/plato-pizza.html">
 											<img class="imagefix" src="images/plato-pizza-dashboard.png" alt="Plato Pizza - Sales Dashboard" width="100%">
 										</a>
 										<p>Plato's Pizza<br>
-											What can we do to improve the pizza store's sales?</p>
+											What can we do to improve the pizza store's sales?
+											<br/><span class="textbackground">Excel</span></p>
 									</li>
 
 									<li>
@@ -214,7 +216,8 @@
 											<img class="imagefix" src="images/remote-work-report-cover.png" alt="Remote Working Survey - How has remote work changed in 2021, barriers and opportunities?" width="100%">
 										</a>
 										<p>Remote Working Survey <br>
-											How has remote work changed in 2021, barriers and opportunities?</p>
+											How has remote work changed in 2021, barriers and opportunities?
+											<br/><span class="textbackground">Excel</span></p>
 									</li>
 
 									<li>
@@ -222,7 +225,8 @@
 											<img class="imagefix"  src="images/global-unicorn-landscape-cover.png" alt="The global Unicorn landscape" width="100%">
 										</a>
 										<p>The global Unicorn landscape<br>
-											Despite the uncertainty of COVID-19, 2021 spawned more unicorns than the previous years combined</p>
+											Despite the uncertainty of COVID-19, 2021 spawned more unicorns than the previous years combined
+											<br/><span class="textbackground">Excel</span></p>
 									</li>
 
 									<li>
@@ -230,7 +234,8 @@
 											<img class="imagefix"  src="images/hiza-logistics.png" alt="Hiza logistics & Owee: Analyzing transport performance" width="100%">
 										</a>
 										<p>Hiza logistics & Owee<br>
-											Analyzing transport performance</p>
+											Analyzing transport performance
+											<br/><span class="textbackground">Excel</span></p>
 									</li>
 									<!--
 									<li>
@@ -245,7 +250,8 @@
 											<img class="imagefix"  src="images\hotel-group-cover.png" alt="Hotel Group - Analyze cancellation rates, and average daily prices & revenue lost" width="100%">
 										</a>
 										<p>Hotel Group </br>
-											Analyze cancellation rates, and average daily prices & revenue lost</p>
+											Analyze cancellation rates, and average daily prices & revenue lost
+											<br/><span class="textbackground">Excel</span></p>
 									</li>
 
 									<!--
