--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 												<p><ul>
 													<li>Over 1 year as a Data Analyst at a logistics startup.</li>
 													<li>2+ years as a Salesforce System Admin and Data Analyst in retail furniture.</li>
-													<li>Worked with Dev and Product teams to solve system issues, standardize databases, and improve data accuracy and analysis efficiency.
-													</li>
+													<!-- <li>Worked with Dev and Product teams to solve system issues, standardize databases, and improve data accuracy and analysis efficiency.
+													</li> -->
 													<li>Experienced in e-commerce, retail, and logistics, with a keen interest in exploring other fields.
 													</li>
 												</ul></p>
