--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Giang Pham's Portfolio - </title>
+		<title>Giang Pham's Data Analyst Portfolio - </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -59,7 +59,7 @@
 				-->
 					<!-- <img src="images/giang-banner-2.png" alt="Banner"> -->
 				<div style="margin: 80px 0 80px 0; width: 100%;">
-					<h1 style="font-size: 100px; text-align: center; color: #353BF7; font-family: Montserrat; font-weight: 800;">Giang's <span style="color: black;">portfolio.</span></h1>
+					<h1 style="font-size: 100px; text-align: center; color: #353BF7; font-family: Montserrat; font-weight: 800;">Giang's <span style="color: black;">Portfolio.</span></h1>
 					<h3 style="color: black; text-align: center; font-family: Inconsolata">— Passionate Data Analyst Making Sense of the Numbers —</h3>
 				</div>
 				<!-- Nav -->
@@ -99,11 +99,11 @@
 											<!-- </div> -->
 
 											<div style="clear: right; text-align: left;  display: inline;">
-												<p>Hi, I am <span style="color: #353BF7; font-weight: 600;"> Giang Pham</span>.</p>
-												<p>I am currently seeking a position as a Data Analyst or Business Intelligence Analyst.</p>
+												<p>Dear Hiring Manager,</p>
+												<p>I am Giang Pham. I am currently seeking a position as a Data Analyst or Business Intelligence Analyst.</p>
 												<p><b>Highlights</b></p>
 												<p><ul>
-													<li>Over 1 year as a Data Analyst at a logistics startup.</li>
+													<li>1+ year as a Data Analyst at a logistics startup.</li>
 													<li>2+ years as a Salesforce System Admin and Data Analyst in retail furniture.</li>
 													<!-- <li>Worked with Dev and Product teams to solve system issues, standardize databases, and improve data accuracy and analysis efficiency.
 													</li> -->
@@ -111,13 +111,37 @@
 													</li>
 												</ul></p>
 												<p><b>Technical Skills</b>
-													<ul>
-														<li>Data tools: Excel, Gsheets, SQL, Looker, Power BI, Basic Python.</li>
-														<li>Platforms: SAP, Odoo, Salesforce, Magento, WordPress, Haravan, Larksuite.</li>
-														<li>Web tools: HTML, CSS, Google Analytics.</li>
-														<li>Other tools: Outlook, Notion, Trello, Jira, Confluence, Diagram.net.</li>
-														<li>Soft skills : Problem solving, analytical thinking, attention to detail, communication.</li>
+													<ul class="content">
+														<li class="content-line">
+															<span class="label">Data tools</span>
+															<span class="value">: Excel, Gsheets, SQL, Looker, Power BI, Basic Python.</span>
+														</li>
+														<li class="content-line">
+															<span class="label">Platforms</span>
+															<span class="value">: SAP, Odoo, Salesforce, Magento, WordPress, Haravan, Larksuite.</span>
+														</li>
+														<li class="content-line">
+															<span class="label">Web tools</span>
+															<span class="value">: HTML, CSS, Google Analytics.</span>
+														</li>
+														<li class="content-line">
+															<span class="label">Other tools</span>
+															<span class="value">: Outlook, Notion, Trello, Jira, Confluence, Diagram.net.</span>
+														</li>
+														<li class="content-line">
+															<span class="label">Soft skills</span>
+															<span class="value">: Problem solving, analytical thinking, attention to detail, communication.</span>
+														</li>
 													</ul>
+													
+
+													<!-- <ul>
+														<li> <span class="label">Data tools</span> <span class="value">: Excel, Gsheets, SQL, Looker, Power BI, Basic Python.</span></li>
+														<li> <span class="label">Platforms</span> <span class="value">: SAP, Odoo, Salesforce, Magento, WordPress, Haravan, Larksuite.</span></li>
+														<li> <span class="label">Web tools</span> <span class="value">: HTML, CSS, Google Analytics.</span></li>
+														<li> <span class="label">Other tools</span> <span class="value">: Outlook, Notion, Trello, Jira, Confluence, Diagram.net.</span></li>
+														<li> <span class="label">Soft skills</span> <span class="value">: Problem solving, analytical thinking, attention to detail, communication.</span></li>
+													</ul> -->
 												</p>
 												<p><b>Strengths</b></p>
 												<ul>
@@ -402,15 +426,23 @@
 									<p>Electric store - Sales analysis</p>
 								</li>
 							</ul>
-							<!--
-							<footer class="major">
-								<ul class="actions special">
-									<li><a href="generic.html" class="button primary">Get Started</a></li>
-									<li><a href="generic.html" class="button">Learn More</a></li>
-								</ul>
-							</footer>
-							-->
 						</section>
+
+						<!-- Get Started -->
+						<!-- <section id="Storytelling" class="main special">
+							<header class="major">
+								<h2><span>Storytelling Projects</span></h2>
+								<h3></h3>
+							</header>
+							<ul class="features">
+								<li>
+									<a href="python-projects/electric-store.html">
+										<img class="imagefix" style="text-decoration: none;" src="images\electric-store_sales_analysis.png" alt="Adventure Works - Sales & Customer Analysis" width="100%">
+									</a>
+									<p>Electric store - Sales analysis</p>
+								</li>
+							</ul>
+						</section> -->
 
 						<!-- Certs-->
 						<section id="python" class="main special">
