--- a/excel-projects/adeline-cases-study.html
+++ b/excel-projects/adeline-cases-study.html
@@ -115,7 +115,7 @@
 									</table>
 								</div>
 
-								<h2>4. Tool: Google Sheets, Google Slides.</h2>
+								<h2>4. Tools: Google Sheets, Google Slides.</h2>
 								
                                 
 
