--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 													<ul class="content">
 														<li class="content-line">
 															<span class="label">Data tools</span>
-															<span class="value">: Excel, Gsheets, SQL, Looker, Power BI, Basic Python.</span>
+															<span class="value">: Excel, Gsheets, SQL, Looker, Superset, Power BI, Basic Python.</span>
 														</li>
 														<li class="content-line">
 															<span class="label">Platforms</span>
