--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 										<!-- <p class="row"> -->
 											<!-- <div class="column" style="margin: auto; text-align: center;"> -->
-											<img style="float: right; margin-left: 20px;" src="images/giang-avatar.png" alt="">
+											<img style="float: right; margin-left: 20px;" src="images/giang-avatar-2.png" alt="">
 											<!-- </div> -->
 
 											<div style="clear: right; text-align: left;  display: inline;">
