--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 														</li>
 														<li class="content-line">
 															<span class="label">Other tools</span>
-															<span class="value">: Outlook, Notion, Trello, Jira, Confluence, Diagram.net.</span>
+															<span class="value">: Outlook, ChatGPT, Notion, Trello, Jira, Confluence, Diagram.net.</span>
 														</li>
 														<li class="content-line">
 															<span class="label">Soft skills</span>
@@ -158,11 +158,34 @@
 													<li>Basic English communication skills.
 													</li>
 												</ul></p> -->
-												<p><b>Preferred locations</b></p>
+
+												<p><b>Preferred Locations</b></p>
 												<ul>
 													<li>Ho Chi Minh City.</li>
 													<li>Binh Duong, or Dong Nai (if transportation is provided).</li>
 												</ul>
+
+												<p><b>Personal Information</b></p>
+												<ul class="content">
+													<li class="content-line">
+														<span class="label">Marital status</span>
+														<span class="value">: Single.</span>
+													</li>
+													<li class="content-line">
+														<span class="label">Email</span>
+														<span class="value">: giangpnt.work@gmail.com</span>
+													</li>
+													<li class="content-line">
+														<span class="label">LinkedIn</span>
+														<span class="value">: <a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></span>
+													</li>
+													<li class="content-line">
+														<span class="label">Address</span>
+														<span class="value">: Phu Nhuan district, HCM City, Vietnam.</span>
+													</li>
+												</ul>
+
+												
 												<!-- <p><b>Contact me</b></p>
 												<ul>
 													<li>LinkedIn: <a href="https://www.linkedin.com/in/giangpham1410/" target="_blank">linkedin.com/in/giangpham1410/</a></li>
