--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 													<li>Experienced in e-commerce, retail, and logistics, with a keen interest in exploring other fields.
 													</li>
 												</ul></p>
-												<p><b>Technical Skills</b>
+												<p><b>Skills</b>
 													<ul class="content">
 														<li class="content-line">
 															<span class="label">Data tools</span>
@@ -126,7 +126,11 @@
 														</li>
 														<li class="content-line">
 															<span class="label">Other tools</span>
-															<span class="value">: Outlook, ChatGPT, Notion, Trello, Jira, Confluence, Diagram.net.</span>
+															<span class="value">: ChatGPT, Jira, Confluence, Outlook, Diagram.net.</span>
+														</li>
+														<li class="content-line">
+															<span class="label">English</span>
+															<span class="value">: Good reading and research skills, basic speaking and listening.</span>
 														</li>
 														<li class="content-line">
 															<span class="label">Soft skills</span>
@@ -483,6 +487,11 @@
 									</tr>
 								</thead>
 								<tbody>
+									<tr></tr>
+										<td>09/2024</td>
+										<td>HackerRank</td>
+										<td>SQL (Intermediate)</td>
+									  </tr>
 									<tr>
 										<td>08/2024</td>
 										<td>Meta</td>
