--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 														</li>
 														<li class="content-line">
 															<span class="label">Platforms</span>
-															<span class="value">: SAP, Odoo, Salesforce, Magento, WordPress, Haravan, Larksuite.</span>
+															<span class="value">: SAP, Odoo, Salesforce, Magento, WordPress, Haravan.</span>
 														</li>
 														<li class="content-line">
 															<span class="label">Web tools</span>
@@ -126,7 +126,7 @@
 														</li>
 														<li class="content-line">
 															<span class="label">Other tools</span>
-															<span class="value">: ChatGPT, Jira, Confluence, Outlook, Diagram.net.</span>
+															<span class="value">: ChatGPT, Jira, Confluence, Diagram.net.</span>
 														</li>
 														<li class="content-line">
 															<span class="label">English</span>
