--- a/sql-projects/pizza-runner.html
+++ b/sql-projects/pizza-runner.html
@@ -39,12 +39,24 @@
                                 <h2>II. Dataset summary</h2>
 								<p> The dataset includes 6 tables:</p>
 									<ul>
-										<li>customer_orders</li>
-										<li>runner_orders</li>
-										<li>runners</li>
-										<li>pizza_names</li>
-										<li>pizza_recipes</li>
-										<li>pizza_toppings</li>
+										<li>customer_orders <br>
+											<img src="..\images\pizza-runner-customer-orders.jpg" alt="">
+										</li>
+										<li>runner_orders <br>
+											<img src="..\images\pizza-runner-runner-orders.jpg" alt="">
+										</li>
+										<li>runners <br>
+											<img src="..\images\pizza-runner-runners.jpg" alt="">
+										</li>
+										<li>pizza_names <br>
+											<img src="..\images\pizza-runner-pizza-names.jpg" alt="">
+										</li>
+										<li>pizza_recipes <br>
+											<img src="..\images\pizza-runner-pizza-recipes.jpg" alt="">
+										</li>
+										<li>pizza_toppings <br>
+											<img src="..\images\pizza-runner-pizza-toppings.jpg" alt="">
+										</li>
 									</ul>
 								<h2>III. Problems:</h2>
 									<p>Danny wants to use the data to answer 5 areas:</p>
