--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 												<ul>
 													<li>Data Analyst.</li>
 													<li>Business Intelligence Analyst.</li>
-													<li>Any roles related to data.</li>
+													<li>Business Analyst.</li>
+													<li>Roles related to data analysis.</li>
 												</ul>
 
 												<p><b>Highlights</b></p>
@@ -251,7 +252,7 @@
 
 							<section id="excel" class="main special">
 								<header class="major">
-									<h2><span>Excel Projects</span></h2>
+									<h2><span>Excel & Gsheets Projects</span></h2>
 									<h3>Skills: Pivot Tables, Power Query, Data Visualization, Storytelling</h3>
 								</header>
 								
@@ -346,6 +347,7 @@
 							<section id="sql" class="main special">
 								<header class="major">
 									<h2><span>SQL Projects</span></h2>
+									<h3>Skills: Joins, Subquery, Window Functions, CTE</h3>
 									<p></p>
 								</header>
 								<ul class="features">
@@ -425,7 +427,7 @@
 							<section id="powerbi" class="main special">
 								<header class="major">
 									<h2><span>Power BI Projects</span></h2>
-									<h3>Skills: Connect data sources, Clean & shape, Data Model, Power Query, DAX, Data Visualization, Dashboard design</h3>
+									<h3>Skills: Connect Data Sources, Clean & Shape, Data Model, Power Query, DAX, Data Visualization, Dashboard Design</h3>
 								</header>
 								<ul class="features">
 									<li>
@@ -461,7 +463,7 @@
 						<section id="python" class="main special">
 							<header class="major">
 								<h2><span>Python Projects</span></h2>
-								<h3></h3>
+								<h3>Libraries: Pandas, Matplotlib</h3>
 							</header>
 							<ul class="features">
 								<li>
@@ -477,7 +479,7 @@
 						<section id="Storytelling" class="main special">
 							<header class="major">
 								<h2><span>Storytelling Projects</span></h2>
-								<h3>Skills: Data visualization, Storytelling, Present insights</h3>
+								<h3>Skills: Data Visualization, Storytelling, Present Insights</h3>
 								<h4 style="text-align: left;">Projects: Updating</h4>
 							</header>
 							<!-- <ul class="features">
@@ -506,11 +508,26 @@
 									</tr>
 								</thead>
 								<tbody>
+									<!-- <tr>
+										<td>In Progress</td>
+										<td>Maven Analytics</td>
+										<td>Data Visualization with Matplotlib & Seaborn</td>
+									</tr> -->
 									<tr>
+										<td>In Progress</td>
+										<td>Maven Analytics</td>
+										<td>Data Analysis with Python & Pandas</td>
+									</tr>
+									<tr>
+										<td>In Progress</td>
+										<td>Cloud Technology Consultant</td>
+										<td>AWS</td>
+									</tr>
+									<!-- <tr>
 										<td>09/2024</td>
 										<td>HackerRank</td>
 										<td>SQL (Intermediate)</td>
-									  </tr>
+									  </tr> -->
 									  <!-- <tr>
 										<td>08/2024</td>
 										<td>SQLBI (In Progress)</td>
