--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 						<!-- Get Started -->
 							<section id="powerbi" class="main special">
 								<header class="major">
-									<h2><span>Power BI Projects</span></h2>
+									<h2><span>BI Projects</span></h2>
 									<h3>Skills: Connect Data Sources, Clean & Shape, Data Model, Power Query, DAX, Data Visualization, Dashboard Design</h3>
 								</header>
 								<ul class="features">
@@ -434,19 +434,25 @@
 										<a href="powerbi-projects/adventure-works.html">
 											<img class="imagefix" style="text-decoration: none;" src="images\adventure-works-dashboard-cover.png" alt="Adventure Works - Sales & Customer Analysis" width="100%">
 										</a>
-										<p>Adventure Works - Sales & Customer Analysis</p>
+										<p>Adventure Works - Sales & Customer Analysis
+											<br/><span class="textbackground">Power BI</span> 
+										</p>
 									</li>
 									<li>
 										<a href="powerbi-projects/human-resources.html">
 											<img class="imagefix" src="images\human-resources-report.png" alt="Human Resources Report - Overview, Income, and Satisfaction Insights" width="100%">
 										</a>
-										<p>Human Resources Report - Overview, Income, and Satisfaction Insights</p>
+										<p>Human Resources Report - Overview, Income, and Satisfaction Insights
+											<br/><span class="textbackground">Power BI</span> 
+										</p>
 									</li>
 									<li>
 										<a href="powerbi-projects/financial-report.html">
 											<img class="imagefix" style="text-decoration: none;" src="images\financial-report-cover.png" alt="Adventure Works - Sales & Customer Analysis" width="100%">
 										</a>
-										<p>Financial Report - Income Statement, Balance Sheet, Cash Flow, Financial Details, Revenue Insights</p>
+										<p>Financial Report - Income Statement, Balance Sheet, Cash Flow, Financial Details, Revenue Insights
+											<br/><span class="textbackground">Power BI</span> 
+										</p>
 									</li>
 								</ul>
 								<!--
