--- a/index.html
+++ b/index.html
@@ -526,8 +526,8 @@
 									</tr>
 									<tr>
 										<td>In Progress</td>
-										<td>Cloud Technology Consultant</td>
 										<td>AWS</td>
+										<td>AWS Cloud Technology Consultant Professional</td>
 									</tr>
 									<!-- <tr>
 										<td>09/2024</td>
