--- a/index.html
+++ b/index.html
@@ -566,8 +566,8 @@
 									  </tr>
 									  <tr>
 										<td>12/2021</td>
-										<td>Microsoft</td>
-										<td>Microsoft Certified: Power BI Data Analyst Associate</td>
+										<td>Microsoft Certified</td>
+										<td>Power BI Data Analyst Associate</td>
 									  </tr>
 									  <tr>
 										<td>10/2021</td>
